--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SidebarWidget/SidebarWidget.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SidebarWidget/SidebarWidget.cshtml
@@ -17,7 +17,7 @@
     </a>
     <a href="#" class="c-sideBtn c-sideBtn--group c-sideBtn--first" data-sidebar="common">
         <i class="c-sideBtn__icon c-sideBtn__icon--common"></i>
-        <span>常用工具</span>
+        <span>常用功能</span>
     </a>
     <a href="#" class="c-sideBtn c-sideBtn--group c-sideBtn--last" data-sidebar="compare">
         <i class="c-sideBtn__icon c-sideBtn__icon--compare">
